Revisions to updates: fix header size, fix enerystar logo, fix spacing issues.

--- a/src/main/php/public/css/main.css
+++ b/src/main/php/public/css/main.css
@@ -2226,6 +2226,18 @@ body {
 .app-top {
   margin-bottom: 1.5em; }
 
+.home-top h3 {
+  margin-top: 0;
+  padding-top: 0; }
+
+.home-top p {
+  margin-top: 0;
+  padding-top: 0; }
+
+.home-top ul {
+  margin-bottom: 0;
+  padding-bottom: 0; }
+
 .rating-block {
   margin-bottom: 1.5em;
   padding-top: 2em;
@@ -2319,7 +2331,7 @@ body {
 
 .header {
   background: #112e51;
-  padding: 5px 5px;
+  padding: 5px 2px;
   color: #fff;
   border-bottom: solid 3px #fdb81e; }
 
